# haskell-pit

./: README.md  pit.cabal
src/: Pit.hs
src-exec/: Main.hs
