name:                pit
version:             0.1.0.0
synopsis:            Account management tool.
license:             GPL-2
license-file:        LICENSE
author:              chiro
maintainer:          peanut2626@gmail.com
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules: Pit
  -- other-modules:       
  build-depends:       base >=4.7 && <4.8
                       , directory
                       , filepath
                       , text
                       , unordered-containers
                       , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options: -Wall

executable pit
  hs-source-dirs: src-exec
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base >= 4.7 && < 4.8
                 , pit
                 , bytestring
                 , optparse-applicative
                 , process
                 , temporary
                 , text
                 , unordered-containers
                 , yaml

  ghc-options: -Wall
