name:                pit
version:             0.2.0
synopsis:            Account management tool.
license:             MIT
license-file:        LICENSE
author:              Yuichiro Hanada
maintainer:          Yuichiro Hanada <i@chir.jp>
stability:           Experimental
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10
homepage:            https://github.com/chiro/haskell-pit

description:
  This package provides the account management tool and the library for
  account management.
  .
  This package is a porting of Pit (see <https://github.com/cho45/pit>).

source-repository head
  type: git
  location: git://github.com/chiro/haskell-pit.git

library
  exposed-modules: Pit

  build-depends:       base >=4.7 && <4.8
                       , directory
                       , filepath
                       , text
                       , unordered-containers
                       , yaml
  hs-source-dirs:      src
  default-language:    Haskell2010

  ghc-options: -Wall

executable pit
  hs-source-dirs: src-exec
  default-language: Haskell2010
  main-is: Main.hs
  build-depends: base >= 4.7 && < 4.8
                 , pit
                 , bytestring
                 , optparse-applicative
                 , process
                 , temporary
                 , text
                 , unordered-containers
                 , yaml

  ghc-options: -Wall
